Changed Cusror and fixed spacing on the clock waybar

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -48,7 +48,7 @@ window > box {
 }
 
 #workspaces button {
-  padding: .1rem .4rem;
+  padding: .4rem .4rem;
   color: @red;
   background: transparent;
 }
